--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -135,7 +135,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="25">
+    <Units Count="27">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -164,11 +164,10 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="744"/>
-        <CursorPos Y="765"/>
+        <TopLine Value="313"/>
+        <CursorPos Y="320"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -193,8 +192,7 @@
         <UnitName Value="Projeto"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="358"/>
-        <CursorPos Y="377"/>
+        <TopLine Value="343"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -207,7 +205,7 @@
         <Filename Value="sugestao.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="15"/>
         <WindowIndex Value="1"/>
         <TopLine Value="561"/>
         <CursorPos X="24" Y="573"/>
@@ -220,7 +218,7 @@
         <ComponentName Value="FormNovoProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="13"/>
         <WindowIndex Value="1"/>
         <TopLine Value="5"/>
         <CursorPos Y="40"/>
@@ -234,7 +232,7 @@
         <ComponentName Value="frmDictionaryPopup"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="12"/>
         <WindowIndex Value="1"/>
         <TopLine Value="133"/>
         <CursorPos Y="165"/>
@@ -246,7 +244,7 @@
         <Filename Value="rtfedit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="RTFEdit"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="18"/>
         <WindowIndex Value="1"/>
         <TopLine Value="119"/>
         <CursorPos Y="139"/>
@@ -259,7 +257,7 @@
         <ComponentName Value="FormPropProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
         <TopLine Value="46"/>
         <CursorPos X="3" Y="60"/>
@@ -271,7 +269,7 @@
         <Filename Value="memoversiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MemoVersiculo"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="16"/>
         <WindowIndex Value="1"/>
         <TopLine Value="7"/>
         <CursorPos X="38" Y="39"/>
@@ -302,7 +300,7 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="20"/>
         <WindowIndex Value="1"/>
         <TopLine Value="77"/>
         <CursorPos X="10" Y="102"/>
@@ -314,7 +312,7 @@
         <Filename Value="exportarprojeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExportarProjeto"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="14"/>
         <WindowIndex Value="1"/>
         <TopLine Value="363"/>
         <CursorPos Y="399"/>
@@ -327,7 +325,7 @@
         <ComponentName Value="FrmMesclarProjetos"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="20"/>
+        <EditorIndex Value="21"/>
         <WindowIndex Value="1"/>
         <CursorPos X="21" Y="30"/>
         <UsageCount Value="213"/>
@@ -340,7 +338,7 @@
         <ComponentName Value="FrmEscolherVerseRules"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="19"/>
         <WindowIndex Value="1"/>
         <TopLine Value="69"/>
         <CursorPos X="3" Y="71"/>
@@ -403,10 +401,11 @@
         <Filename Value="sintagma.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="578"/>
-        <CursorPos Y="598"/>
+        <TopLine Value="100"/>
+        <CursorPos X="26" Y="120"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -421,134 +420,150 @@
       </Unit23>
       <Unit24>
         <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\sysutils\sysstr.inc"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="955"/>
         <CursorPos X="30" Y="963"/>
         <UsageCount Value="12"/>
-        <Loaded Value="True"/>
       </Unit24>
+      <Unit25>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\classesh.inc"/>
+        <EditorIndex Value="10"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="306"/>
+        <CursorPos X="23" Y="335"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
+      </Unit25>
+      <Unit26>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\lists.inc"/>
+        <EditorIndex Value="11"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="773"/>
+        <CursorPos Y="776"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
+      </Unit26>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="763" TopLine="751"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="27" Column="9" TopLine="7"/>
       </Position1>
       <Position2>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="765" TopLine="751"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="28" Column="44" TopLine="9"/>
       </Position2>
       <Position3>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="766" TopLine="751"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="120" Column="30" TopLine="97"/>
       </Position3>
       <Position4>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="980" TopLine="961"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="28" Column="57" TopLine="9"/>
       </Position4>
       <Position5>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="989" TopLine="961"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="40" Column="52" TopLine="21"/>
       </Position5>
       <Position6>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="763" TopLine="744"/>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\classesh.inc"/>
+        <Caret Line="335" Column="23" TopLine="306"/>
       </Position6>
       <Position7>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="765" TopLine="744"/>
+        <Caret Line="417" Column="29" TopLine="394"/>
       </Position7>
       <Position8>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="766" TopLine="744"/>
+        <Caret Line="232" Column="18" TopLine="218"/>
       </Position8>
       <Position9>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="980" TopLine="961"/>
+        <Caret Line="263" Column="6" TopLine="235"/>
       </Position9>
       <Position10>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="983" TopLine="961"/>
+        <Caret Line="83" Column="39" TopLine="83"/>
       </Position10>
       <Position11>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="995" TopLine="973"/>
+        <Caret Line="473" TopLine="436"/>
       </Position11>
       <Position12>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="996" TopLine="973"/>
+        <Caret Line="453" TopLine="438"/>
       </Position12>
       <Position13>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="999" TopLine="981"/>
+        <Caret Line="464" Column="33" TopLine="438"/>
       </Position13>
       <Position14>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="597" TopLine="578"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="543" TopLine="519"/>
       </Position14>
       <Position15>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="598" TopLine="578"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="549" TopLine="521"/>
       </Position15>
       <Position16>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="1000" TopLine="981"/>
+        <Caret Line="550" TopLine="531"/>
       </Position16>
       <Position17>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1002" TopLine="981"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="633" Column="22" TopLine="560"/>
       </Position17>
       <Position18>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1019" TopLine="987"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="86" Column="14" TopLine="68"/>
       </Position18>
       <Position19>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="985" TopLine="966"/>
+        <Caret Line="571" TopLine="541"/>
       </Position19>
       <Position20>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="986" TopLine="966"/>
+        <Caret Line="567" Column="32" TopLine="543"/>
       </Position20>
       <Position21>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="985" TopLine="966"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="623" Column="26" TopLine="595"/>
       </Position21>
       <Position22>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="986" TopLine="966"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="580" TopLine="556"/>
       </Position22>
       <Position23>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="985" TopLine="966"/>
+        <Filename Value="projeto.pas"/>
       </Position23>
       <Position24>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="986" TopLine="966"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="868" Column="56" TopLine="836"/>
       </Position24>
       <Position25>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="985" TopLine="966"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="850" Column="36" TopLine="837"/>
       </Position25>
       <Position26>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="986" TopLine="966"/>
+        <Caret Line="934" TopLine="904"/>
       </Position26>
       <Position27>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="763" TopLine="744"/>
+        <Caret Line="84" Column="15" TopLine="66"/>
       </Position27>
       <Position28>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="377" TopLine="358"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="320" TopLine="313"/>
       </Position28>
       <Position29>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="765" Column="26" TopLine="744"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="119" TopLine="100"/>
       </Position29>
       <Position30>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1001" Column="45" TopLine="988"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="120" TopLine="100"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -578,7 +593,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="2">
+    <BreakPoints Count="3">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -591,8 +606,15 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="1553"/>
+        <Line Value="1555"/>
       </Item2>
+      <Item3>
+        <Kind Value="bpkSource"/>
+        <WatchScope Value="wpsLocal"/>
+        <WatchKind Value="wpkWrite"/>
+        <Source Value="versiculo.pas"/>
+        <Line Value="320"/>
+      </Item3>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
