--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -154,8 +154,8 @@
         <UnitName Value="formPrincipal"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="267"/>
-        <CursorPos Y="286"/>
+        <TopLine Value="669"/>
+        <CursorPos X="45" Y="687"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -166,8 +166,8 @@
         <UnitName Value="Versiculo"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="313"/>
-        <CursorPos Y="320"/>
+        <TopLine Value="314"/>
+        <CursorPos Y="334"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -184,7 +184,7 @@
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <CursorPos X="18"/>
-        <UsageCount Value="169"/>
+        <UsageCount Value="163"/>
       </Unit3>
       <Unit4>
         <Filename Value="projeto.pas"/>
@@ -192,7 +192,8 @@
         <UnitName Value="Projeto"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="343"/>
+        <TopLine Value="812"/>
+        <CursorPos Y="821"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -207,8 +208,8 @@
         <UnitName Value="Sugestao"/>
         <EditorIndex Value="15"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="561"/>
-        <CursorPos X="24" Y="573"/>
+        <TopLine Value="598"/>
+        <CursorPos Y="398"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit5>
@@ -220,7 +221,7 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="13"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="5"/>
+        <TopLine Value="65"/>
         <CursorPos Y="40"/>
         <UsageCount Value="205"/>
         <Loaded Value="True"/>
@@ -259,7 +260,7 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="46"/>
+        <TopLine Value="151"/>
         <CursorPos X="3" Y="60"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
@@ -271,7 +272,7 @@
         <UnitName Value="MemoVersiculo"/>
         <EditorIndex Value="16"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="7"/>
+        <TopLine Value="85"/>
         <CursorPos X="38" Y="39"/>
         <UsageCount Value="224"/>
         <Loaded Value="True"/>
@@ -282,7 +283,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="25"/>
         <CursorPos X="51" Y="45"/>
-        <UsageCount Value="42"/>
+        <UsageCount Value="36"/>
       </Unit11>
       <Unit12>
         <Filename Value="PCRE.pas"/>
@@ -302,7 +303,7 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="20"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="77"/>
+        <TopLine Value="158"/>
         <CursorPos X="10" Y="102"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
@@ -315,7 +316,7 @@
         <EditorIndex Value="14"/>
         <WindowIndex Value="1"/>
         <TopLine Value="363"/>
-        <CursorPos Y="399"/>
+        <CursorPos X="29" Y="284"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
       </Unit14>
@@ -340,7 +341,7 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="19"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="69"/>
+        <TopLine Value="33"/>
         <CursorPos X="3" Y="71"/>
         <UsageCount Value="228"/>
         <Loaded Value="True"/>
@@ -350,7 +351,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="3"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="164"/>
+        <TopLine Value="136"/>
         <CursorPos X="23" Y="117"/>
         <UsageCount Value="232"/>
         <Loaded Value="True"/>
@@ -361,7 +362,7 @@
         <UnitName Value="twSyncThread"/>
         <EditorIndex Value="4"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="29"/>
+        <TopLine Value="3"/>
         <CursorPos Y="44"/>
         <UsageCount Value="212"/>
         <Loaded Value="True"/>
@@ -373,7 +374,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="93"/>
         <CursorPos X="23" Y="122"/>
-        <UsageCount Value="82"/>
+        <UsageCount Value="76"/>
       </Unit19>
       <Unit20>
         <Filename Value="onttokenizer.pas"/>
@@ -381,7 +382,7 @@
         <UnitName Value="ONTTokenizer"/>
         <EditorIndex Value="6"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="204"/>
+        <TopLine Value="203"/>
         <CursorPos X="3" Y="50"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
@@ -404,8 +405,8 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="100"/>
-        <CursorPos X="26" Y="120"/>
+        <TopLine Value="640"/>
+        <CursorPos X="55" Y="665"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
       </Unit22>
@@ -416,7 +417,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="1487"/>
         <CursorPos X="3" Y="1489"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="4"/>
       </Unit23>
       <Unit24>
         <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\sysutils\sysstr.inc"/>
@@ -424,146 +425,147 @@
         <WindowIndex Value="1"/>
         <TopLine Value="955"/>
         <CursorPos X="30" Y="963"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="6"/>
       </Unit24>
       <Unit25>
         <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\classesh.inc"/>
         <EditorIndex Value="10"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="306"/>
-        <CursorPos X="23" Y="335"/>
-        <UsageCount Value="11"/>
+        <TopLine Value="273"/>
+        <CursorPos X="9" Y="289"/>
+        <UsageCount Value="10"/>
         <Loaded Value="True"/>
       </Unit25>
       <Unit26>
         <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\lists.inc"/>
         <EditorIndex Value="11"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="773"/>
-        <CursorPos Y="776"/>
-        <UsageCount Value="11"/>
+        <TopLine Value="548"/>
+        <CursorPos X="3" Y="568"/>
+        <UsageCount Value="10"/>
         <Loaded Value="True"/>
       </Unit26>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="27" Column="9" TopLine="7"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="756" Column="14" TopLine="747"/>
       </Position1>
       <Position2>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="28" Column="44" TopLine="9"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="87" Column="21" TopLine="70"/>
       </Position2>
       <Position3>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="120" Column="30" TopLine="97"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="180" Column="74" TopLine="150"/>
       </Position3>
       <Position4>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="28" Column="57" TopLine="9"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="397" Column="22" TopLine="365"/>
       </Position4>
       <Position5>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="40" Column="52" TopLine="21"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="398" Column="19" TopLine="366"/>
       </Position5>
       <Position6>
-        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\classesh.inc"/>
-        <Caret Line="335" Column="23" TopLine="306"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="755" Column="31" TopLine="723"/>
       </Position6>
       <Position7>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="417" Column="29" TopLine="394"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="756" Column="21" TopLine="724"/>
       </Position7>
       <Position8>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="232" Column="18" TopLine="218"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="87" Column="21" TopLine="70"/>
       </Position8>
       <Position9>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="263" Column="6" TopLine="235"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="180" Column="99" TopLine="150"/>
       </Position9>
       <Position10>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="83" Column="39" TopLine="83"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="395" Column="69" TopLine="363"/>
       </Position10>
       <Position11>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="473" TopLine="436"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="397" Column="22" TopLine="365"/>
       </Position11>
       <Position12>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="453" TopLine="438"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="398" Column="19" TopLine="366"/>
       </Position12>
       <Position13>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="464" Column="33" TopLine="438"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="755" Column="31" TopLine="723"/>
       </Position13>
       <Position14>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="543" TopLine="519"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="756" Column="21" TopLine="724"/>
       </Position14>
       <Position15>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="549" TopLine="521"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="286" TopLine="267"/>
       </Position15>
       <Position16>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="550" TopLine="531"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="262" Column="56" TopLine="244"/>
       </Position16>
       <Position17>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="633" Column="22" TopLine="560"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="687" Column="45" TopLine="669"/>
       </Position17>
       <Position18>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="86" Column="14" TopLine="68"/>
+        <Caret Line="24" Column="40" TopLine="14"/>
       </Position18>
       <Position19>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="571" TopLine="541"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="35" TopLine="15"/>
       </Position19>
       <Position20>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="567" Column="32" TopLine="543"/>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\classesh.inc"/>
+        <Caret Line="294" Column="18" TopLine="277"/>
       </Position20>
       <Position21>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="623" Column="26" TopLine="595"/>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\classesh.inc"/>
+        <Caret Line="293" Column="18" TopLine="277"/>
       </Position21>
       <Position22>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="580" TopLine="556"/>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\lists.inc"/>
+        <Caret Line="559" Column="50" TopLine="556"/>
       </Position22>
       <Position23>
-        <Filename Value="projeto.pas"/>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\rtl\objpas\classes\classesh.inc"/>
+        <Caret Line="293" Column="17" TopLine="273"/>
       </Position23>
       <Position24>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="868" Column="56" TopLine="836"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="131" Column="13" TopLine="111"/>
       </Position24>
       <Position25>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="850" Column="36" TopLine="837"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="41" Column="41" TopLine="36"/>
       </Position25>
       <Position26>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="934" TopLine="904"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="134" TopLine="128"/>
       </Position26>
       <Position27>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="84" Column="15" TopLine="66"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="13" Column="25" TopLine="10"/>
       </Position27>
       <Position28>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="320" TopLine="313"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="37" Column="14" TopLine="30"/>
       </Position28>
       <Position29>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="119" TopLine="100"/>
+        <Caret Line="151" TopLine="129"/>
       </Position29>
       <Position30>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="120" TopLine="100"/>
+        <Caret Line="55" Column="67" TopLine="24"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -593,7 +595,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="3">
+    <BreakPoints Count="2">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -608,13 +610,6 @@
         <Source Value="projeto.pas"/>
         <Line Value="1555"/>
       </Item2>
-      <Item3>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="versiculo.pas"/>
-        <Line Value="320"/>
-      </Item3>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
