--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -12,6 +12,10 @@
       </XPManifest>
       <Icon Value="0"/>
     </General>
+    <i18n>
+      <EnableI18N Value="True"/>
+      <OutDir Value="languages"/>
+    </i18n>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
@@ -151,10 +155,11 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="formPrincipal"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="569"/>
-        <CursorPos Y="588"/>
+        <TopLine Value="686"/>
+        <CursorPos X="21" Y="688"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -163,11 +168,9 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="345"/>
-        <CursorPos X="6" Y="364"/>
+        <CursorPos X="68" Y="18"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -192,8 +195,8 @@
         <UnitName Value="Projeto"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="2188"/>
-        <CursorPos X="34" Y="2222"/>
+        <TopLine Value="238"/>
+        <CursorPos X="16" Y="239"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -221,8 +224,8 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="11"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="65"/>
-        <CursorPos Y="40"/>
+        <TopLine Value="28"/>
+        <CursorPos X="90" Y="49"/>
         <UsageCount Value="205"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -247,7 +250,7 @@
         <UnitName Value="RTFEdit"/>
         <EditorIndex Value="16"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="119"/>
+        <TopLine Value="210"/>
         <CursorPos Y="139"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
@@ -261,7 +264,7 @@
         <EditorIndex Value="15"/>
         <WindowIndex Value="1"/>
         <TopLine Value="151"/>
-        <CursorPos X="3" Y="60"/>
+        <CursorPos X="45" Y="166"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -272,8 +275,8 @@
         <UnitName Value="MemoVersiculo"/>
         <EditorIndex Value="14"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="85"/>
-        <CursorPos X="29" Y="110"/>
+        <TopLine Value="26"/>
+        <CursorPos Y="44"/>
         <UsageCount Value="224"/>
         <Loaded Value="True"/>
       </Unit10>
@@ -303,8 +306,8 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="18"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="158"/>
-        <CursorPos X="10" Y="102"/>
+        <TopLine Value="145"/>
+        <CursorPos X="36" Y="164"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -341,8 +344,7 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="33"/>
-        <CursorPos X="3" Y="71"/>
+        <CursorPos X="42" Y="9"/>
         <UsageCount Value="228"/>
         <Loaded Value="True"/>
       </Unit16>
@@ -351,7 +353,6 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="3"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="136"/>
         <CursorPos X="23" Y="117"/>
         <UsageCount Value="232"/>
         <Loaded Value="True"/>
@@ -362,7 +363,6 @@
         <UnitName Value="twSyncThread"/>
         <EditorIndex Value="4"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="3"/>
         <CursorPos Y="44"/>
         <UsageCount Value="212"/>
         <Loaded Value="True"/>
@@ -382,7 +382,6 @@
         <UnitName Value="ONTTokenizer"/>
         <EditorIndex Value="6"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="203"/>
         <CursorPos X="3" Y="50"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
@@ -393,7 +392,7 @@
         <UnitName Value="ONTParser"/>
         <EditorIndex Value="7"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="93"/>
+        <TopLine Value="261"/>
         <CursorPos Y="125"/>
         <UsageCount Value="202"/>
         <Loaded Value="True"/>
@@ -428,124 +427,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="115" Column="15" TopLine="97"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="98" Column="15" TopLine="80"/>
       </Position1>
       <Position2>
-        <Filename Value="formprincipal.pas"/>
-        <Caret Line="368" TopLine="366"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="351" Column="30" TopLine="332"/>
       </Position2>
       <Position3>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2209" Column="25" TopLine="2179"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="573" Column="57" TopLine="554"/>
       </Position3>
       <Position4>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="66" Column="29" TopLine="47"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="91" Column="14" TopLine="74"/>
       </Position4>
       <Position5>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2221" Column="36" TopLine="2185"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="457" Column="62" TopLine="444"/>
       </Position5>
       <Position6>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2218" Column="22" TopLine="2185"/>
+        <Filename Value="ontparser.pas"/>
+        <Caret Line="256" TopLine="231"/>
       </Position6>
       <Position7>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="58" TopLine="58"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="736" TopLine="698"/>
       </Position7>
       <Position8>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="140" Column="15" TopLine="122"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="93" Column="15" TopLine="76"/>
       </Position8>
       <Position9>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1383" TopLine="1350"/>
+        <Filename Value="sintagma.pas"/>
+        <Caret Line="463" Column="40" TopLine="461"/>
       </Position9>
       <Position10>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2226" Column="5" TopLine="2188"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="342" Column="37" TopLine="332"/>
       </Position10>
       <Position11>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="353" TopLine="330"/>
+        <Caret Line="1090" TopLine="910"/>
       </Position11>
       <Position12>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="354" Column="7" TopLine="321"/>
+        <Caret Line="90" Column="15" TopLine="72"/>
       </Position12>
       <Position13>
         <Filename Value="versiculo.pas"/>
-        <Caret Line="347" Column="10" TopLine="330"/>
+        <Caret Line="336" Column="3" TopLine="328"/>
       </Position13>
       <Position14>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="735" Column="17" TopLine="701"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="91" Column="27" TopLine="72"/>
       </Position14>
       <Position15>
         <Filename Value="sintagma.pas"/>
-        <Caret Line="98" Column="15" TopLine="80"/>
+        <Caret Line="463" Column="5" TopLine="461"/>
       </Position15>
       <Position16>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="351" Column="30" TopLine="332"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="580" Column="26" TopLine="569"/>
       </Position16>
       <Position17>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="573" Column="57" TopLine="554"/>
+        <Filename Value="formnovoprojeto.pas"/>
+        <Caret Line="23" Column="67" TopLine="18"/>
       </Position17>
       <Position18>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="91" Column="14" TopLine="74"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="428" Column="67" TopLine="411"/>
       </Position18>
       <Position19>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="457" Column="62" TopLine="444"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="216" TopLine="181"/>
       </Position19>
       <Position20>
-        <Filename Value="ontparser.pas"/>
-        <Caret Line="256" TopLine="231"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="2042" TopLine="2254"/>
       </Position20>
       <Position21>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="736" TopLine="698"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="266" Column="3" TopLine="239"/>
       </Position21>
       <Position22>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="93" Column="15" TopLine="76"/>
+        <Filename Value="versiculo.pas"/>
+        <Caret Line="1089" Column="86" TopLine="1058"/>
       </Position22>
       <Position23>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="463" Column="40" TopLine="461"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="429" Column="67" TopLine="413"/>
       </Position23>
       <Position24>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="342" Column="37" TopLine="332"/>
+        <Filename Value="memoversiculo.pas"/>
+        <Caret Line="70" TopLine="85"/>
       </Position24>
       <Position25>
-        <Filename Value="versiculo.pas"/>
-        <Caret TopLine="133"/>
+        <Filename Value="memoversiculo.pas"/>
+        <Caret Line="44" TopLine="26"/>
       </Position25>
       <Position26>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="1090" TopLine="910"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="785" Column="3" TopLine="775"/>
       </Position26>
       <Position27>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="90" Column="15" TopLine="72"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="786" Column="3" TopLine="776"/>
       </Position27>
       <Position28>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="336" Column="3" TopLine="328"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="787" Column="3" TopLine="777"/>
       </Position28>
       <Position29>
-        <Filename Value="versiculo.pas"/>
-        <Caret Line="91" Column="27" TopLine="72"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="794" Column="3" TopLine="784"/>
       </Position29>
       <Position30>
-        <Filename Value="sintagma.pas"/>
-        <Caret Line="463" Column="5" TopLine="461"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="683" Column="24" TopLine="681"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -575,7 +574,7 @@
     </Linking>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="2">
+    <BreakPoints Count="1">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -583,13 +582,6 @@
         <Source Value="PCRE.pas"/>
         <Line Value="1709"/>
       </Item1>
-      <Item2>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="projeto.pas"/>
-        <Line Value="1558"/>
-      </Item2>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
